# dregg

./: .gitattributes  .gitignore  BRIEF-RELEVE-NUIT-18-07.md  Cargo.toml  GOAL-ARKLIB-VACUITY.md  GOAL-COLLECTIVE-FICTION-DEMO.md  GOAL-DISTRIBUTED-DEOS.md  GOAL-FEDERATION.md  GOAL-FRI-PRODUCT.md  GOAL-GREENS-THAT-MEAN-SOMETHING.md  GOAL-HONEST-VERIFICATION.md  GOAL-MULTICHAIN-SETTLEMENT.md  GOAL-STARK-KILL.md  GOAL.md  GOALS-INDEX.md  HORIZONLOG.md  PYANA_DESIGN.md  README.md  REORIENT.md  TESTQALOG.md  discovery.json  rust-toolchain.toml
.config/: nextest.toml
agent-host/: Cargo.toml
agent-platform/: Cargo.toml
app-framework/: Cargo.toml
app-framework/src/: authorizer.rs  cipherclerk.rs  inbox_endpoint.rs  ring_trade.rs
app-framework/tests/: intent_coordination.rs
attested-dm/: Cargo.toml
auditable-fund/: Cargo.toml
bridge/: Cargo.toml
chain/: .gitignore  Cargo.toml  DEPLOYMENTS.md  foundry.toml
circuit/: Cargo.toml
circuit-prove/: Cargo.toml
circuit-prove/sketches/poseidon2-merkle-bench/: Cargo.toml
circuit-prove/sketches/poseidon2-merkle-bench/src/: main.rs
circuit-prove/sketches/wgpu-babybear-ntt/: Cargo.toml
circuit-prove/sketches/wgpu-babybear-ntt/src/: main.rs
collective-choice/: Cargo.toml
commons-arbiter/: Cargo.toml
commons-arbiter/examples/: commons_arbiter.rs
commons-arbiter/src/: lib.rs  quorum.rs  tests.rs
confined-swarm/: Cargo.toml
constraint-lowering/: Cargo.toml
cosmos-lightclient/: Cargo.toml
cosmos-settlement/: Cargo.toml
cosmos-settlement/src/: error.rs  lib.rs  msg.rs  state.rs  verifier.rs  vk.rs
cosmos-settlement/tests/: settlement.rs
crypto-hermine/: Cargo.toml
demo-agent/: Cargo.toml
deos-hermes/: Cargo.toml
deos-homeserver/: Cargo.toml  rust-toolchain.toml
deos-homeserver/src/: lib.rs
deos-view/: Cargo.toml
deploy/gateway-ask/: .env.example  .gitignore  Caddyfile.on-demand-tls  Cargo.toml  README.md  RUNBOOK.md  deploy.sh
deploy/gateway-ask/src/: lib.rs  main.rs
deploy/gateway-ask/tests/: serve_roundtrip.rs
discord-bot/: Cargo.toml
docs/: ALG-COMPLEXITY-AUDIT.md  AUTOMATAFL-N2-DESIGN.md  BOT-E2E-GAPMAP.md  BOT-SHARED-BACKEND-DESIGN.md  CIRCUITS-FROM-PROOFS.md  CONTENT-AND-ASSET-SPEC.md  CONTRIBUTING-ASSETS.md  DEPLOY-PLAN.md  DESIGN-composed-attestation-architecture.md  DESIGN-crown-lowering-and-assurance-ladder.md  DESIGN-parse-as-derivation.md  DESIGN-proof-producing-templater.md  DESIGN-verified-layout-optimizer.md  GAME-STRATEGY.md  (+39 more)
dregg-genesis-snapshot/: Cargo.toml
dregg-genesis-snapshot/src/: lib.rs  tests.rs
dregg-multiway-tug/: Cargo.toml
dregg-multiway-tug/src/: fold.rs  game.rs  hidden_hand.rs  lib.rs  packs.rs  reference.rs  state.rs  surface.rs
dregg-multiway-tug/src/surface/: tests.rs
dregg-multiway-tug/tests/: round.rs
dreggnet-cheevo/: Cargo.toml
dreggnet-cheevo/src/: lib.rs
dreggnet-cheevo/tests/: cheevos.rs
dreggnet-companion/: Cargo.toml
dreggnet-companion/src/: lib.rs
dreggnet-companion/tests/: integration.rs
dreggnet-craft/: Cargo.toml
dreggnet-craft/src/: forge.rs  lib.rs
dreggnet-craft/tests/: forge.rs
dreggnet-gear/: Cargo.toml
dreggnet-gear/src/: gear.rs  lib.rs  multislot.rs  offering.rs  statblock.rs  talents.rs
dreggnet-gear/tests/: integration.rs
dreggnet-names/: Cargo.toml
dreggnet-names/src/: lib.rs
dreggnet-names/tests/: driven.rs
dreggnet-party/: Cargo.toml
dreggnet-party/src/: lib.rs
dreggnet-sprite/: Cargo.toml
dreggnet-sprite/src/: card.rs  gear.rs  lib.rs  svg.rs
dreggnet-sprite/tests/: sprite.rs
dreggnet-surfaces/: Cargo.toml
dreggnet-surfaces/src/: cheevo.rs  craft.rs  guild.rs  inventory.rs  lib.rs  tavern.rs  trade.rs  world.rs
dreggnet-surfaces/tests/: golden_render.rs  shared_world.rs  surfaces.rs
dreggnet-tournament/: Cargo.toml
dreggnet-tournament/src/: lib.rs
dreggnet-tournament/tests/: bracket.rs
durable-workflow/: Cargo.toml  README.md
durable-workflow/src/: admission.rs  deploy.rs  error.rs  lib.rs  meter.rs  runner.rs
durable-workflow/tests/: admission.rs  crash_resume.rs  cross_process_meter.rs  deploy.rs  features.rs  pg_weld.rs  process_runner.rs  unhappy_paths.rs
entity-compose/: Cargo.toml
entity-compose/src/: lib.rs
entity-compose/tests/: budget.rs  end_to_end.rs  leaf_prove.rs
eth-lightclient/: Cargo.toml
eth-lightclient/src/: base.rs  base_fault_proof.rs  evm.rs  execution.rs  finality.rs  lib.rs  ssz.rs
eth-lightclient/tests/: base_fault_proof.rs  base_holding.rs  evm_holding.rs  finality_kat.rs  foreign_fields.rs  kat_bls.rs  merkle.rs  nomad_law.rs  robinhood_holding.rs  sync_aggregate.rs
eth-lightclient/tests/fixtures/: base_fault_proof_mainnet.rs  finality.rs  robinhood_tsla.rs  weth.rs
fhegg-fhe/: ADDITIVE-FOLD-ENVELOPE.md  Cargo.toml  HBOX-24CORE-ENVELOPE.md  MEASURED-ENVELOPE.md
fhegg-fhe/src/: additive.rs  boundary.rs  lib.rs  mpc.rs
fhir/: Cargo.toml
fhir/src/: ast.rs  compile.rs  lib.rs  products.rs  solver_bridge.rs  tier.rs  types.rs
intent/: Cargo.toml
intent/src/: call_clearing.rs  drex_routing.rs  fulfillment.rs  lib.rs  trustless.rs
intent/tests/: drex_routing_e2e.rs  ring_settlement_differential.rs
orb/crates/cake-serve/: Cargo.toml  build.rs
orb/crates/cake-serve/src/: lib.rs
preflight/: Cargo.toml
preflight/src/checks/: backends.rs  composition.rs  derivation_descriptor.rs  effect_vm.rs  ivc_real.rs  lean_marshal.rs  mod.rs  proofs.rs  sovereign.rs
realm-model/: Cargo.toml
realm-model/src/: catalog.rs  identity.rs  instance.rs  lib.rs  realm.rs  world.rs
realm-model/tests/: driven.rs  hybrid_identity_succession.rs  membrane_per_realm.rs
sdk-ts/test/rust-verifier/: Cargo.toml
sdk-ts/test/rust-verifier/src/: main.rs
solana-settlement/: Cargo.toml
solana-settlement/scripts/: gen_vk.py
solana-settlement/src/: error.rs  groth16.rs  instruction.rs  lib.rs  processor.rs  state.rs  vk.rs
solana-settlement/tests/: settle_flow.rs
tee-verify/: Cargo.toml
tee-verify/src/: attested_data.rs  lib.rs  oracle_mark.rs  snp.rs  snp_chain.rs
tee-verify/tests/: attested_data_lane.rs  oracle_mark_weld.rs
(+1803 files in other folders)
